Fix scroll bar bug due to loading screen too wide

--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -16,7 +16,7 @@
     #loading {
       background: #FFF;
       height: 100vh;
-      width: 100vw;
+      width: 99vw;
       overflow: hidden;
       .spinner {
         border: 20px solid #f3f3f3;
