--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -44,7 +44,7 @@ a {
     .wrapper .container #loading {
       background: #FFF;
       height: 100vh;
-      width: 100vw;
+      width: 99vw;
       overflow: hidden; }
       .wrapper .container #loading .spinner {
         border: 20px solid #f3f3f3;
